# remote

./: AGENTS.md  CONTRIBUTING.md  README.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml
remote/: __init__.py  checksum.py  cli.py  diff.py  manifest.py  sync.py
tests/: test_checksum.py  test_cli.py  test_diff.py  test_manifest.py  test_sync.py
