[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote"
version = "0.1.0"
description = "Offline-first file sync tool for BlackRoad OS"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "BlackRoad OS, Inc." },
]

[project.scripts]
remote = "remote.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
